--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,12 +3,22 @@
     flex-wrap: wrap;
     justify-content: center;
     background: #F5F5FA;
-    padding-top: 30px;
+    padding-top: 0px;
     padding-bottom: 30px;
     text-align: center;
 
+    &::before {
+        content: '';
+        width: calc(100% - 60px);
+        height: 2px;
+        background: #E6E6F0;
+        margin-bottom: 30px;
+    }
+
     &-info {
-        
+        & p {
+            margin-top: 0;
+        } 
     }
 
     &-adress {
@@ -27,8 +37,10 @@
         letter-spacing: 1px;
         text-transform: uppercase;
         color: #24A3FF;
-        margin-top: 0;
-        margin-bottom: 20px;
+    }
+
+    &-fb {
+        margin-bottom: 10px;
     }
 
     &-phone {
@@ -56,5 +68,94 @@
         line-height: 20px;
         color: #B3B3BA;
         margin-bottom: 0;
+        font-style: normal;
+        margin-top: 15px;
+    }
+}
+
+@media (min-width: 768px) {
+    .wrapper {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .footer {
+        justify-content: start;
+        &::before {
+            width: calc(100% - 120px);
+            margin-left: 60px;
+        }
+
+        &-info {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            justify-content: flex-start;
+            text-align: left;
+        }
+
+        &-adress {
+            display: inline;
+            margin-bottom: 0;
+
+            &::after {
+                content: "";
+                margin-right: 10px;
+                margin-left: 10px;
+                display: inline-block;
+                width: 6px;
+                height: 6px;
+                background: #B3B3BA;
+                border-radius: 100%;
+            }
+        }
+
+        &-local {
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: flex-start;
+            text-align: left;
+            margin-right: 10px;
+            margin-bottom: 20px;
+
+            & p {
+                margin-bottom: 0;
+            }
+        }
+
+        &-contact {
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: flex-start;
+            text-align: left;
+            align-items: center;
+
+            & p {
+                margin-bottom: 0;
+            }
+        }
+
+        &-item {
+            &:not(:last-child):after {
+                content: "";
+                margin-right: 10px;
+                margin-left: 10px;
+                display: inline-block;
+                width: 6px;
+                height: 6px;
+                background: #B3B3BA;
+                border-radius: 100%;
+            }
+        }
+
+        &-fb {
+            margin-bottom: 0;
+        }
+
+        &-copyright {
+            display: flex;
+            justify-content: flex-start;
+            text-align: left;
+        }
     }
 }
