--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,24 +1,59 @@
-.footer {
+.footer-info,
+.footer-social {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+
+    @media (min-width: 768px) {
+        flex-direction: row;
+        column-gap: 25px;
+        row-gap: 20px;
+
+        /*.footer-item:not(:last-child)::after {
+            content: "";
+            display: inline-block;
+            width: 6px;
+            height: 6px;
+            background: #B3B3BA;
+            border-radius: 100%;
+            margin-left: 10px;
+        }*/
+    }
+}
+
+.footer-social {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.footer {
     background: #F5F5FA;
     padding-top: 0px;
     padding-bottom: 30px;
-    text-align: center;
 
-    &::before {
-        content: '';
-        width: calc(100% - 60px);
-        height: 2px;
-        background: #E6E6F0;
-        margin-bottom: 30px;
+    p {
+        margin: 0;
     }
 
-    &-info {
-        & p {
-            margin-top: 0;
-        } 
+    &-line {
+        border-top: 2px solid #E6E6F0;
+        padding-top: 30px;
+
+        @media (min-width: 768px) {
+            display: grid;
+            grid-template-columns: 400px 1fr;
+            row-gap: 20px;
+
+            .footer-copyright {
+                margin-top: 0;
+                text-align: right;
+            }
+
+            .footer-fb {
+                margin-top: 0;
+            }
+        }
     }
 
     &-adress {
@@ -40,14 +75,13 @@
     }
 
     &-fb {
-        margin-bottom: 10px;
+        margin-top: 20px;
     }
 
     &-phone {
         font-weight: 700;
         font-size: 16px;
         line-height: 20px;
-        text-align: right;
         color: #46466E;
         margin-top: 0;
         margin-bottom: 10px;
@@ -63,99 +97,13 @@
     }
 
     &-copyright {
+        text-align: center;
         font-weight: 400;
         font-size: 16px;
         line-height: 20px;
         color: #B3B3BA;
         margin-bottom: 0;
+        margin-top: 30px;
         font-style: normal;
-        margin-top: 15px;
-    }
-}
-
-@media (min-width: 768px) {
-    .wrapper {
-        margin-left: 0;
-        margin-right: 0;
-    }
-
-    .footer {
-        justify-content: start;
-        &::before {
-            width: calc(100% - 120px);
-            margin-left: 60px;
-        }
-
-        &-info {
-            display: flex;
-            flex-wrap: wrap;
-            flex-direction: column;
-            justify-content: flex-start;
-            text-align: left;
-        }
-
-        &-adress {
-            display: inline;
-            margin-bottom: 0;
-
-            &::after {
-                content: "";
-                margin-right: 10px;
-                margin-left: 10px;
-                display: inline-block;
-                width: 6px;
-                height: 6px;
-                background: #B3B3BA;
-                border-radius: 100%;
-            }
-        }
-
-        &-local {
-            display: flex;
-            flex-wrap: nowrap;
-            justify-content: flex-start;
-            text-align: left;
-            margin-right: 10px;
-            margin-bottom: 20px;
-
-            & p {
-                margin-bottom: 0;
-            }
-        }
-
-        &-contact {
-            display: flex;
-            flex-wrap: nowrap;
-            justify-content: flex-start;
-            text-align: left;
-            align-items: center;
-
-            & p {
-                margin-bottom: 0;
-            }
-        }
-
-        &-item {
-            &:not(:last-child):after {
-                content: "";
-                margin-right: 10px;
-                margin-left: 10px;
-                display: inline-block;
-                width: 6px;
-                height: 6px;
-                background: #B3B3BA;
-                border-radius: 100%;
-            }
-        }
-
-        &-fb {
-            margin-bottom: 0;
-        }
-
-        &-copyright {
-            display: flex;
-            justify-content: flex-start;
-            text-align: left;
-        }
     }
 }
