--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,36 +1,41 @@
 .header {
     height: 100vh;
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    position: relative;
-    z-index: 1;
-    &::before {
-        content: "";
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url(../assets/images/symbol.svg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        z-index: 0;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-image: url(../assets/images/symbol.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 
     &-full {
-        position: relative;
-        z-index: 2;
         display: grid;
-        grid-template-rows: 45px 55px;
+        grid-template-rows: 45px minmax(5px, 1fr);
+
+        @media (min-width: 768px) {
+            grid-template-rows: 25px 1fr;
+            grid-row-gap: 30px;
+            padding-top: 50px;
+            padding-left: 60px;
+        }
+
+        @media (min-width: 1024px) {
+            display: flex;
+            flex-direction: column;
+            grid-row-gap: 0;
+            padding: 50px 60px;
+        }
+
+        @media (min-width: 1920px) {
+            padding: 50px 160px;
+        }
     }
 
     &-info {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         padding: 10px 15px;
-        position: relative;
-        z-index: 1;
+
         &::before {
             content: "";
             background: rgba(245, 245, 250, 0.2);
@@ -39,16 +44,44 @@
             top: 0;
             left: 0;
             position: absolute;
-            z-index: 0;
+
+            @media (min-width: 768px) {
+                display: none;
+            }
         }
-        
-        align-items: center;
     }
+
+    @media (min-width: 768px) {
+        .header-info {
+            display: flex;
+            align-items: center;
+            padding: 0;
+        }
+                
+        .hi-item:not(:last-child)::after {
+            display: inline-block;
+            content: "";
+            width: 6px;
+            height: 6px;
+            background: #E6E6F0;
+            margin-right: 6px;
+            margin-left: 6px;
+            border-radius: 100%;
+        };
+    }
+
+    @media (min-width: 1024px) {
+        .header-info {
+            grid-column: 2/3;
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-start;
+            margin-bottom: 18px;
+        }
+    } 
 
     &-lang {
         font-size: 0;
-        position: relative;
-        z-index: 2;
     
         &__item {
             font-weight: 700;
@@ -84,9 +117,16 @@
         line-height: 20px;
         text-align: right;
         color: #B3B3BA;
+
+        @media (min-width: 768px) {
+            display: inline-block;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
     }
 
     &-phone {
+        grid-column: 2/3;
         font-weight: 700;
         font-size: 16px;
         line-height: 20px;
@@ -100,36 +140,50 @@
         display: none;
         width: 24px;
         height: 24px;
+
+        @media (min-width: 768px) {
+            display: inline-block;
+        }
     }
 
     &-graphic {
         display: grid;
+        grid-row: 2/3;
         grid-template-columns: 1fr 32px;
         padding: 15px;
-        align-items: center;
+
+        @media (min-width: 768px) {
+            display: grid;
+            grid-template-rows: 60px 1fr;
+            padding: 0;
+            grid-row-gap: 30px;
+            grid-template-columns: 1fr;
+        }
+
+        @media (min-width: 1024px) {
+            display: flex;
+            justify-content: space-between;
+        }
 
         &-left {
-            display: grid;
-            grid-template-columns: 90px 1fr;
-            align-items: start;
+            @media (min-width: 768px) {
+                grid-row: 1/2;
+            }
         }
 
         &-logo {
+            grid-column: 2/3;
             width: 69.33px;
             height: 32px;
-        }
 
-        &-linkmb {
-            font-weight: 400;
-            font-size: 20px;
-            line-height: 24px;
-            color: #FFFFFF;
+            @media (min-width: 768px) {
+                width: 130px;
+                height: 60px;
+            }
         }
     }
     
     &-title {
-        position: relative;
-        z-index: 0;
         font-weight: 700;
         font-size: 38px;
         line-height: 46px;
@@ -138,179 +192,25 @@
         padding-left: 30px;
         padding-right: 30px;
         margin: 0;
-        display: grid;
-        align-self: center;
+        
     }
 
     &-scroll {
-        position: relative;
-        z-index: 0;
-        width: 42px;
-        height: 42px;
-        opacity: 0.5;
-        border: 2px solid #FFFFFF;
-        border-radius: 100%;
         display: grid;
-        justify-self: center;
-        align-self: self-end;
-        margin-bottom: 30px;
-        background: url(../assets/images/arrow-down-scroll-header.svg);
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-}
+        justify-items: center;
+        align-items: center;
 
-@media (min-width: 768px) {
-    .header {
-        &-full {
-            display: grid;
-            grid-template-rows: 0.5fr 90px;
-        }
-
-        &-info {
-            display: flex;
-            padding-left: 60px;
-            padding-top: 30px;
-            padding-bottom: 0px;
-            align-items: center;
-            
-            &::before {
-                display: none;
-            }
-        }
-
-        &-lang {
-            display: inline-block;
-        }
-
-        &-adress {
-            display: inline-block;
-        }
-
-        &-fb {
-            display: inline-block;
-        }
-
-        &-graphic {
-            display: flex;
-            flex-direction: column;
-            align-items: start;
-            padding-left: 60px;
-            padding-top: 0;
-            padding-bottom: 0;
-            margin-top: 10px;
-
-            &-left {
-                display: flex;
-            }
-
-            &-logo {
-                width: 130px;
-                height: 60px;
-            }
-
-            &-linkmb {
-                display: none;
-            }
-        }
-    }
-
-    .nav-tablet-top {
-        &:not(:last-child) {
-            margin-right: 6px;
-        }
-
-        &:not(:last-child)::after {
+        &::after {
             content: "";
-            margin-left: 6px;
-            display: inline-block;
-            width: 6px;
-            height: 6px;
-            background: #E6E6F0;
+            width: 42px;
+            height: 42px;
+            opacity: 0.5;
+            border: 2px solid #FFFFFF;
             border-radius: 100%;
-        }  
-    }
-
-    #menu__toggle {
-        opacity: 0;
-      }
-
-    .menu {
-        margin-top: 10px;
-
-        &__box {
-            display: flex;
-
-            & li:not(:last-child) {
-                margin-right: 15px;
-            }
-        }
-
-        &__item {
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 20px;
-            text-align: right;
-            color: #FFFFFF;
-            display: inline-block;
-
-           
-        }
-    }
-}
-
-@media (min-width: 1024px) {
-    .header {
-        &::before {
-            background-size: contain;
-            background-position-x: center;
-        }
-
-        &-full {
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 0.5fr 1fr;
-        }
-
-        &-graphic {
-            display: grid;
-            padding-left: 60px;
-            padding-right: 60px;
-            grid-template-columns: 0.5fr 1fr;
-            margin-top: 0;
-            position: relative;
-
-            &-left {
-                justify-self: start;
-            }
-        }
-
-        &-info {
-            justify-self: end;
-            padding-right: 60px;
-            margin-bottom: 0;
-        }
-
-        .menu {
-            display: grid;
-            margin-top: 0;
-            
-            &__bottom {
-                justify-self: end;
-            }
-        }
-    }
-}
-
-@media (min-width: 1920px) {
-    .header {
-        &-info {
-            padding-right: 160px;
-        }
-
-        &-graphic {
-            padding-left: 160px;
-            padding-right: 160px;
+            margin-bottom: 30px;
+            background: url(../assets/images/arrow-down-scroll-header.svg);
+            background-repeat: no-repeat;
+            background-position: center;
         }
     }
 }
